--- a/assets/css/quemSomos/quemSomos-titulo.css
+++ b/assets/css/quemSomos/quemSomos-titulo.css
@@ -3,7 +3,7 @@
 	font-family: "Poppins", sans-serif;
 	font-size: 2.75rem;
 	margin-bottom: 1rem;
-	margin: 0 auto 25px auto;
+	margin: 25px auto;
 	width: 80%;
 }
 
