--- a/assets/css/sobre/sobre-icon.css
+++ b/assets/css/sobre/sobre-icon.css
@@ -1,49 +1,77 @@
 .sobre__icon {
-    height: 110px;
-    margin-top: 15px;
-    position: relative;
-    width: 110px;
+	height: 110px;
+	margin-top: 15px;
+	position: relative;
+	width: 110px;
 }
 
 .sobre__icon:not(:last-child)::after {
-    background-image: url("../../img/Icons/Seta.svg");
-    background-size: cover;
-    content: "";
-    height: 25px;
-    left: 50%;
-    position: absolute;
-    top: 50%;
-    transform: translate(310%, 0);
-    width: 20px;
-  
+	background-image: url("../../img/Icons/Seta.svg");
+	background-size: cover;
+	content: "";
+	height: 25px;
+	left: 50%;
+	position: absolute;
+	top: 50%;
+	transform: translate(310%, 0);
+	width: 20px;
+}
+
+@media screen and (max-width: 789px) and (min-width: 640px) {
+	.sobre__icon:nth-child(4)::after {
+		left: -30%;
+		top: 138%;
+		transform: rotate(135deg);
+	}
+}
+
+@media screen and (max-width: 639px) and (min-width: 490px) {
+	.sobre__icon:nth-child(4)::after {
+		left: 50%;
+		top: 50%;
+		transform: translate(310%, 0);
+	}
+	.sobre__icon:nth-child(3)::after {
+		left: -51%;
+		top: 106%;
+		transform: rotate(155deg);
+	}
+}
+
+@media screen and (max-width: 489px) and (min-width: 340px) {
+	.sobre__icon:nth-child(2n)::after {
+		left: -13%;
+		top: 108%;
+		transform: rotate(135deg);
+	}
 }
 
 .sobre__icon--atoms {
-    background: url("../../img/Icons/atomo.svg") no-repeat center / cover;
-    background-size: 55px;
-    background-position: 50% 80%;
+	background: url("../../img/Icons/atomo.svg") no-repeat center / cover;
+	background-size: 55px;
+	background-position: 50% 80%;
 }
 
 .sobre__icon--molecules {
-    background: url("../../img/Icons/moleculas.svg") no-repeat center / cover;
-    background-size: 60px;
-    background-position: 50% 80%;
+	background: url("../../img/Icons/moleculas.svg") no-repeat center / cover;
+	background-size: 60px;
+	background-position: 50% 80%;
 }
 
 .sobre__icon--organisms {
-    background: url("../../img/Icons/organisms.svg") no-repeat center / cover;
-    background-size: 55px;
-    background-position: 50% 80%;
+	background: url("../../img/Icons/organisms.svg") no-repeat center / cover;
+	background-size: 55px;
+	background-position: 50% 80%;
 }
 
 .sobre__icon--tamplates {
-    background: url("../../img/Icons/templates.svg") no-repeat center / cover;
-    background-size: 47px;
-    background-position: 50% 95%;
+	background: url("../../img/Icons/templates.svg") no-repeat center / cover;
+	background-size: 47px;
+	background-position: 50% 95%;
 }
 
 .sobre__icon--pages {
-    background: url("../../img/Icons/pages.svg") no-repeat center / cover;
-    background-size: 50px;
-    background-position: 50% 100%;
+	background: url("../../img/Icons/pages.svg") no-repeat center / cover;
+	background-size: 50px;
+	background-position: 50% 100%;
 }
