--- a/assets/css/sobre/sobre.css
+++ b/assets/css/sobre/sobre.css
@@ -1,14 +1,9 @@
 .sobre {
 	text-align: center;
+	padding: 2.5rem 1rem;
 }
 
-@media screen and (min-width: 0) {
-	.sobre {
-		padding: 2.5rem 1rem;
-	}
-}
-
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 789px) {
 	.sobre {
 		padding: 2.5rem;
 	}
